--- a/frontend/main.css
+++ b/frontend/main.css
@@ -45,7 +45,52 @@ html{
     outline: none;
     cursor: pointer;
     box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.29);
+    height: 5vh;
+    transition: height .2s ease;
 }
 
+.main-nav > div > button:hover{
+    height: 6vh;
+    transition: height .3s ease;
+}
 
+.reservation-main{
+    line-height: 1rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    /*box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.29);*/
+}
+
+.reservation-form{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: 1px solid black;
+    padding: 2rem 2rem;
+    border-radius: 15px;
+    justify-content: center;
+    align-items: center;
+    gap: 1.5rem;
+    background: #ece8e8;
+    box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.39);
+}
+
+label{
+    font-weight: 600;
+}
+
+input{
+    cursor: pointer;
+}
+
+.reservation-form button{
+    padding: 1rem 1.3rem;
+    border-radius: 15px;
+    border: transparent;
+    background: #b5beb5;
+    font-weight: 600;
+    font-size: 1.2rem;
+}
 
