--- a/frontend/main.css
+++ b/frontend/main.css
@@ -54,43 +54,45 @@ html{
     transition: height .3s ease;
 }
 
-.reservation-main{
-    line-height: 1rem;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
-    /*box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.29);*/
+.main-page-container{
+    width: 100vw;
+    height: 90vh;
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
 }
 
 .reservation-form{
+    border: 1px solid black;
+    padding: 5rem 2.5rem;
+    border-radius: 15px;
     display: flex;
     flex-direction: column;
-    gap: 1rem;
-    border: 1px solid black;
-    padding: 2rem 2rem;
-    border-radius: 15px;
+    box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.29);
+    background: #efecec;
     justify-content: center;
     align-items: center;
-    gap: 1.5rem;
-    background: #ece8e8;
-    box-shadow: 5px 3px 10px 2px rgba(0, 0, 0, 0.39);
+}
+
+.reservation-form .item{
+    display: flex;
+    margin-bottom: 1.5rem;
 }
 
 label{
-    font-weight: 600;
+    display: inline-block;
+    width: 12rem;
+    font-size: 1.3rem;
+    font-weight: 500;
 }
 
 input{
+    width: 10rem;
+    outline: none;
     cursor: pointer;
 }
 
 .reservation-form button{
-    padding: 1rem 1.3rem;
-    border-radius: 15px;
-    border: transparent;
-    background: #b5beb5;
-    font-weight: 600;
-    font-size: 1.2rem;
+    padding: 1rem 1.5rem;
 }
 
